--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="streamline_dev/css/utils.css">
 <link rel="stylesheet" type="text/css" href="streamline_dev/css/dropdown.css">
 <link rel="stylesheet" type="text/css" href="streamline_dev/css/global-search.css">
+<link rel="stylesheet" type="text/css" href="streamline_dev/css/examples.css">
 <link rel="stylesheet" type="text/css" href="streamline_dev/css/animation.css">
 <link rel="stylesheet" type="text/css" href="streamline_dev/css/streamline-codes.css">
 <link rel="stylesheet" type="text/css" href="streamline_dev/css/streamline-embedded.css">
@@ -86,6 +87,13 @@
   <input type="text" name="search" placeholder="Search">
   <button type="submit" class="btn btn-search icon icon-search"></button>
 </div>
+<div class="break-md"></div>
+<div class="shadow-wrapper flex-container">
+	<div class="shadow-box z-1">Z-1</div>
+	<div class="shadow-box z-2">Z-2</div>
+	<div class="shadow-box z-3">Z-3</div>
+</div>
+<div class="shadow-box-hover shadow-hover dragable">This is the <strong style="color: #707070;">shadow-hover</strong> Hover Me!</div>
 </body>
 
 </html>
